# FuturisysPOC

./: .gitignore  README.md  WorkflowGitCiCd.drawio  pyproject.toml  requirements.txt  start.py  tree.bash
.github/workflows/: actions-push-branch-dev.yml  actions-push-branch-test.yml  main.yml  promote-dev-to-test.yml  promote-test-to-main.yml
src/: __init__.py  app_config_system.py  start.py
src/db/: commands.py  create_db.sql  models.py  session.py
src/model/: export_model.py  load_model.py  model.joblib
test/: test_api.py  test_predict.py
