[project]
name = "fastapi-ml-backend"
version = "0.1.0"
description = "Backend FastAPI avec modèle ML et PostgreSQL"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",  # Requis par TestClient
    "pytest-cov>=4.1.0",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src"]